new charophyte paper

--- a/v0/papers.html
+++ b/v0/papers.html
@@ -344,6 +344,34 @@ summary{
       </div>
       </details>
 
+    <details>
+      <summary>
+	<a href="www/Charophyte_algae_and_land_plant_origins.pdf" 
+	   target="_blank_">Charophyte algae and land plant
+	   origins.</a>
+      </summary>
+      <div style="margin-left: 30px; margin-right: 240px; margin-top: 10px;   margin-bottom: 20px;">
+         <h5> McCourt, Delwiche, Karol3. Trends in Ecology and
+	   Evolution. 2004</h5>
+
+      The charophyte algae are six distinct groups of mostly
+      freshwater green algae that are related to modern land
+      plants. Charophyte algae exhibit diverse morphologies and
+      reproductive strategies, from unicells to branching erect forms,
+      and from swimming asexual spores to sex involving eggs and
+      sperm, respectively. The green algae known as stoneworts
+      (Charales) are suggested to be the extant sister group to all
+      land plants, although the phylogeny is not conclusive. Here we
+      review recent molecular phylogenetic work on the charophyte
+      algae and its implications for our understanding of the origins
+      of land plants and of characters in their aquatic ancestors that
+      might have played a role in the explosive diversification of
+      plants on land.
+
+         </div>
+    </details>
+
+
 
 </div>
 
