app buttons reduced to just the toggles and fit

--- a/v0/papers.html
+++ b/v0/papers.html
@@ -371,6 +371,34 @@ summary{
          </div>
     </details>
 
+    <details>
+      <summary>
+	<a href="www/structureOfTheCyanobacterialPhytochrome2PhotosensorImpliesATryptophanSwitchForPhytochromeSignaling.pdf" 
+	   target="_blank_">Structure of the Cyanobacterial Phytochrome 2 Photosensor
+Implies a Tryptophan Switch for Phytochrome Signaling</a>
+      </summary>
+      <div style="margin-left: 30px; margin-right: 240px; margin-top: 10px;   margin-bottom: 20px;">
+         <h5>Anders, Daminelli-Widany, Mroginski, von Stetten¶,
+         Essen.  Journal of Biological Chemistry. 2013 </h5>
+
+      Phytochromes are highly versatile photoreceptors, which occur ubiquitously in plants as well
+      as in many light-responsive microorganisms. Here, photosynthetic cyanobacteria utilize up to
+      three different phytochrome architectures, where only the plant-like and the single-domain
+      cyanobacteriochromes are structurally characterized so far. Cph2 represents a third group in
+      Synechocystis species and affects their capability of phototaxis by controlling c-di-GMP
+      synthesis and degradation. The 2.6-Å crystal structure of its red/far-red responsive
+      photosensory module in the Pr state reveals a tandem-GAF bidomain that lacks the
+      figure-of-eight knot of the plant/cph1 subfamily. Its covalently attached phycocyanobilin
+      chromophore adopts a highly tilted ZZZssa conformation with a novel set of interactions
+      between its propionates and the GAF1 domain. The tongue-like protrusion from the GAF2 domain
+      interacts with the GAF1-bound chromophore via its conserved PRXSF, WXE, and W(G/A)G
+      motifs. Mutagenesis showed that the integrity of the tongue is indispensable for Pr 3 Pfr
+      photoconversion and involves a swap of the motifs’ tryptophans within the tongue-GAF1
+      interface. This “Trp switch” is supposed to be a crucial element for the photochromicity of
+      all multidomain phytochromes.
+
+         </div>
+    </details>
 
 
 </div>
