--- a/v0/terms.html
+++ b/v0/terms.html
@@ -153,21 +153,28 @@ summary{
 
 <details><summary>holoprotein</summary>
 
-or conjugated protein, is an apoprotein combined with its prosthetic group.  A conjugated protein is a protein that
-functions in interaction with other (non-polypeptide) chemical groups attached by covalent bonding or weak
-interactions.
+ ...or conjugated protein, is an apoprotein combined with its prosthetic  group.
+<br><br>
 
+  A conjugated protein is a protein that functions in interaction with
+other (non-polypeptide) chemical groups attached by covalent bonding
+or weak interactions.
+  <p><p>
+    
 Some enzymes do not need additional components to show full activity. Others require non-protein molecules called
 cofactors to be bound for activity.
+  <p><p>
 
 Many proteins contain only amino acids and no other chemical groups, and they are called simple proteins. However, other
 kind of proteins yield, on hydrolysis, some other chemical component in addition to amino acids and they are called
 conjugated proteins. The non-amino part of a conjugated protein is usually called its prosthetic group. Most prosthetic
 groups are formed from vitamins. Conjugated proteins are classified on the basis of the chemical nature of their
 prosthetic groups.
+  <p><p>
 
 A conjugated protein is a protein that functions in interaction with other (non-polypeptide) chemical groups attached by
 covalent bonding or weak interactions.[1]
+  <p><p>
 
 Many proteins contain only amino acids and no other chemical groups, and they are called simple proteins. However, other
 kind of proteins yield, on hydrolysis, some other chemical component in addition to amino acids and they are called
@@ -175,13 +182,16 @@ conjugated proteins. The non-amino part of a conjugated protein is usually calle
 groups are formed from vitamins. Conjugated proteins are classified on the basis of the chemical nature of their
 prosthetic groups.
 
+  <p><p>
 Some examples of conjugated proteins are lipoproteins, glycoproteins, phosphoproteins, hemoproteins, flavoproteins,
 metalloproteins, phytochromes, cytochromes, opsins and chromoproteins.
+  <p><p>
 
 Hemoglobin contains the prosthetic group known as heme. Each heme group contains an iron ion (Fe2+) which forms a
 co-ordinate bond with an oxygen molecule (O2), allowing hemoglobin to transport oxygen through the bloodstream. As each
 of the four protein subunits of hemoglobin possesses its own prosthetic heme group, each hemoglobin can transport four
 molecules of oxygen.
+  <p><p>
 
 Glycoproteins are generally the largest and most abundant group of conjugated proteins. They range from glycoproteins in
 cell surface membranes that constitute the glycocalyx, to important antibodies produced by leukocytes.
@@ -200,6 +210,8 @@ may serve to reduce the activation energy for rotation. The C15 ¼ C16 isomeriza
 the D ring with its Pr bonding partner His 290 and might perturb Phe 198 and Phe 203 by removing favourable van der
 Waals interactions.
 
+    <p><p>
+
 In addition to rapid isomerization of the C15 ¼ C16 bond, a subset of published experiments have predicted a torsion
 angle rotation from the 15Eanti to the 15Esyn configuration at the C14–C15 bond20,22,27,28. However, recent elegant
 studies with chemically locked biliverdin analogues demonstrated that the locked 15Eanti conformer of biliverdin
@@ -212,7 +224,9 @@ characteristic of the Pfr conformer29. Presumably, such movement(s) induce addit
 polypeptide to generate the distinctive shape of the Pfr conformer, which for many fungal and prokaryotic phytochromes
 affects the activity of an appended kinase domain1,4. For plant phytochromes Pfr formation exposes a nuclear
 localization signal in a downstream PAS-related domain30 or uncovers interaction motifs for downstream effectors31.
-  
+
+  <p><p>
+
 It is also possible that C15 ¼ C16 bond isomerization could lead to perturbation of the solvent-exposed Phe side chains
 and that further torsion about C14–C15 could push Asp 207 and initiate local melting of the DIP motif on the surface of
 the CBD. Either of these would lead to a change in the shape and properties of the invariant surface patch at the
