build docker image

--- a/v0/intro.html
+++ b/v0/intro.html
@@ -1,16 +1,23 @@
 <div style="margin-left: 20px;">
 <h4> The Structure of a Plant Photosensory Module</h4>
 
-    Plants are exquisitely sensitive to light, using their knowledge to decide
+    Plants are exquisitely sensitive to light.  They use the information thus acquired to decide
     <ul>
       <li> when to germinate, leaf and flower
       <li> where, when and how to grow
     </ul>
 
-    "Knowledge" and "decide" are terms we most commonly use to describe animal, and especially
-    human cognitive capabilities.  I use these terms here intentionally to
-    highlight the common ground shared by plants and animals, between
-    oak and human.
+    "Knowledge" and "decide" are terms we most commonly use to describe animal - and especially
+    human - cognitive capabilities.  I use these terms here intentionally - to
+    highlight the common ground shared by plants and animals, by oak and human, microbe, and (our
+    focus here) the mouse-eared cress.
+
+    <p> We usually see an immense gulf between humans and other living creatures.  We could also
+    attend to the complexities and capabilities found in all organisms.
+
+   <p> This project argues for seeing things that way, for the "anti-narcissism of continuous variation"
+     (Eduardo Viveiros de Castro).   The big differences are uncontested.  The continuous variation
+     and similarities are also worthy of our attention.
 
    <p><p>I take <b>cognitive</b> to describe processes in which
       <ol>
