PAS and PHY now in intial view

--- a/v0/intro.html
+++ b/v0/intro.html
@@ -5,9 +5,10 @@
 
     <p> The webapp proper opens when you click on the <b>PhyB</b> tab above, showing a selective 
        view of the light-responsive circular pyrrole nestled inside a hairpin of the Phy domain of
-      the PhyB molecule from the small plant, Arabidopsis thaliana.
+      the PhyB molecule from the small plant, Arabidopsis thaliana.  The PAS domain appears in
+      shades of orange.
 
-    <p><image src="www/pyrroleDandHairpin.png" width=120 style="margin-left:200px"><p>
+    <p><image src="www/pyrroleDandPASandPHY.png" width=200 style="margin-left:200px"><p>
 
       
       This 4-carbon, 1-nitrogen ring <b>pyrrole D</b> changes orientation upon aborbing a photon of red light.
@@ -68,7 +69,13 @@
       the many layers and pieces of inter-operating open source software upon which we all depend.
 
 
-      <p>My plan is to extend this webapp to capture more of the conformational change of this
-	molecule as it responds to varying amounts of red and far-red light.
+      <p>My plan is to extend this webapp to capture more of the steric change of this
+	molecule in response to varying amounts of red and far-red light.
+
+	<p> Then I will move up from the angstrom scale, to meters and feet, and try to capture
+	actual mixed-species collaborative branching in my local 100-acre urban old-growth forest -
+	where branch and leaf seek the light in elegant arabesque.  Pacific Northwest old-growth:
+	intricate, responsive - cognitive - at scales small and large.
+	
 
 </div>
