before adapting to new nglShiny version

--- a/v0/intro.html
+++ b/v0/intro.html
@@ -23,6 +23,15 @@
 
 <u><h5>Context<h5></u>
     
+   Jim Harrison, in his forward to Robert Bringhurst’s
+   <a href="https://www.amazon.com/Tree-Meaning-Language-Mind-Ecology/dp/1582435057"
+   target=_blank>Tree of Meaning: Language, Mind & Ecology</a> quotes Neil Claremon:
+
+   <blockquote>
+  Don't you think reality is an aggregate, an accretion of the perceptions of all creatures?
+   </blockquote>
+
+
     <p><p>Plants are exquisitely sensitive to light, using the knowledge of the environment they acquire to decide
     <ul>
       <li> when to germinate, leaf and flower
